...
                color = Color.White,
                fontSize = 36.sp,
            ), modifier = Modifier.padding(0.dp, 6.dp, 0.dp, 0.dp)
        )
    }, actions = {
        IconButton(onClick = { openMenu = true }) {
            Icon(Icons.Filled.MoreVert, contentDescription = "Open menu", tint = Color.White)
        }
        DropdownMenu(expanded = openMenu, onDismissRequest = { openMenu = false }) {
            DropdownMenuItem(text = { Text("Clear saved data") }, onClick = {
                clearDB()
                openMenu = false
            },
                modifier = Modifier.testTag("clearDbEntry")
            )
        }

    }, colors = TopAppBarDefaults.centerAlignedTopAppBarColors(MarvelRed)
    )
}
...
