...
        elevation = CardDefaults.cardElevation(5.dp),
        modifier = Modifier
            .fillMaxWidth()
            //16:9 as the images requested
            .aspectRatio(1.77777777778f)
            .clickable(onClick = { navigateToDetail(character.id) })
            .testTag("clickableCharacter")
    ) {
        Box() {
            AnimatedImage(
                image = character.thumbnail, preview = preview, modifier = Modifier
                    .fillMaxSize()
                    .clip(CardDefaults.shape)
...
